--- a/cw_base/pubspec.yaml
+++ b/cw_base/pubspec.yaml
@@ -1,20 +1,39 @@
 name: cw_base
-description: "A new Flutter package project."
+description: "Base package for Cake Wallet"
 version: 0.0.1
-homepage:
+publish_to: none
+homepage: https://cakewallet.com
 
 environment:
-  sdk: ^3.8.1
+  sdk: '>=3.0.6 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cw_core:
+    path: ../cw_core
+  cw_ethereum:
+    path: ../cw_ethereum
+  cw_evm:
+    path: ../cw_evm
+  web3dart: ^2.7.1
+  hive: ^2.2.3
+  bip39: ^1.0.6
+  collection: ^1.17.1
+
+dependency_overrides:
+  web3dart:
+    git:
+      url: https://github.com/cake-tech/web3dart.git
+      ref: cake
+  watcher: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
